# LandmarksR

./: .gitignore  README.md
Assets/LandmarksR/Samples/TaskTables/: flanker_trials.tsv  nback_trials.tsv  primitive_2d_sequence.tsv  primitive_3d_sequence.tsv  stroop_trials.tsv
Assets/LandmarksR/Scenes/: Calibration.unity
Assets/LandmarksR/Scenes/Demo/: LandmarksR Demo.unity  NBackText.unity  StroopText.unity
Assets/LandmarksR/Scripts/Editor/: ExpandInspector.cs
Assets/LandmarksR/Scripts/Experiment/: Experiment.cs  Settings.cs
Assets/LandmarksR/Scripts/Experiment/Data/: DataFrame.cs  MergedTable.cs  Table.cs  TextTable.cs
Assets/LandmarksR/Scripts/Experiment/Log/: DataLogger.cs  ExperimentLogger.cs  LocalLogger.cs  LogMessage.cs  LoggerQueue.cs  RemoteLogger.cs  TextLogger.cs
Assets/LandmarksR/Scripts/Player/: Hud.cs
Assets/PerspectiveTransformation/Resources/Settings/: PerspectiveTransformationSettings.prefab
Assets/PerspectiveTransformation/Scenes/: PerspectiveTransformation.unity
Assets/QuestStartingTemplate/Scenes/: TaylorSelect.unity
Docfx/: docfx.json
Docfx/docs/: Quest Calibration.md  Quick Introduction to Quest.md  Unit Testing.md  core_components.md  data.md  introduction.md  landmarks_r_structure.md  tasks.md  toc.yml
Docfx/docs/Tasks/: BaseTask.md
ProjectSettings/: EditorBuildSettings.asset
Screenshots/viewpoint/: third_person
Server/: pyproject.toml
Server/src/landmarksr_logs/: __init__.py  client.py  models.py  server.py  store.py  tabular.py
Server/tests/: test_server.py
(+22 files in other folders)
